Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7420

obdfilter-survey.sh test_3a: tgt_request_handle()) @@@ echo_srv: No target for connected export

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.0
    • None
    • None
    • master, single MDS/MGS, single OSS, two OSTs
    • 3
    • 9223372036854775807

      The obdechosurvey test 3 on the Master has following error:

      tgt_request_handle()) @@@ echo_srv: No target for connected export
      

      According to client's log, commands for odbecho were send and received by server successfully. After receiving the server has been provided attach and setup of the obdecho without errors.
      During setup the obdecho was not configured into obd_device and doesn't represented in lu device but use legacy obd device stack. In that case it lack an ability to execute an any network requests so have a root cause of test failing.
      Obdecho survey test 3 uses a special obd srv target to simulate fast disk storage. Previously it replaced an obdfilter module in lustre stack and provides a operations over fake device. Then obdfilter replaced with OFD and unified target project landed but not obd echo srv. Now, the obd echo srv has to be also rewrited to use an lu device stack with target support.

            tappro Mikhail Pershin
            aromanenko alyona romanenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: