lustre/obdecho/echo_internal.h
@@ -45,6 +45,7 @@
 
 #ifdef HAVE_SERVER_SUPPORT
 extern struct obd_ops echo_obd_ops;
+extern struct lu_device_type echo_srv_type;
 int echo_persistent_pages_init(void);
 void echo_persistent_pages_fini(void);
 #endif /* HAVE_SERVER_SUPPORT */
